Fix scaling on mobile screens

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ label {
   padding: 20px;
   position: absolute;
   top: 0;
-  left: 50%;
+  left: 48%;
   margin-left: -40%;
   width: 80%;
   margin-top: 50px;
